<resources>
    <string name="app_name">CallScreenApp</string>
    <string name="call_themes_fragment_title_text">Call Screen Themes</string>
    <string name="customize_fragment_title_text">Customize</string>
    <string name="customize_fragment_preview">Preview</string>
    <string name="my_themes_fragment_title_text">My Themes</string>
    <string name="ringtone_activity_title_text">Ringtones</string>
    <string name="fragment_select_contact_title">Select set for</string>
    <string name="fragment_select_contact_all_contact">All Contacts</string>
    <string name="fragment_select_contact_specific_contact">A Specific Contact</string>
    <string name="onboard_btn_text">Next</string>
    <string name="onboard_btn_get_started">Get Started</string>
    <string name="fragment_onboard_1_text">Customize your call with a perfect theme</string>
    <string name="fragment_onboard_2_text">Easy to customize your phone call</string>
    <string name="fragment_onboard_3_text">Flash effect when incoming call</string>
    <string name="search_hint">Search name or phone number</string>
    <string name="contact_title">Contact</string>
    <string name="setting_title">Settings</string>
    <string name="setting_customer_support">Customer Support</string>
    <string name="setting_rate_app">Rate App</string>
    <string name="setting_privacy_policy">Privacy Policy</string>
    <string name="setting_terms_of_use">Terms Of Use</string>
    <string name="setting_more_apps">More Apps</string>
    <string name="dialer_name">Call Screen Theme</string>

    <string name="create_item_back">Back</string>

    <string name="text_privacy_policy" translatable="false"><u>Privacy Policy</u></string>
    <string name="text_term" translatable="false"><u>Terms Of Use</u></string>

    <string name="more_app" translatable="false">https://play.google.com/store/apps/developer?id=Technology+Product+and+Service</string>
    <string-array name="group_email">
        <item>bestfreeappsgames@gmail.com</item>
    </string-array>

    <!-- ads & subscription -->
    <string name="sub_text_des" translatable="false">
        Subscribers enjoy unlimited, ad-free access to all Premium features.Non-subscribers use the app with ads and limited Premium access.Subscription options are WEEKLY (week_price) or YEARLY (year_price), both auto-renewing. Payments are charged to the Google Account, automatically renewing unless disabled 24 hours before the period "'s end.Updates and new features are included.Account is charged for renewal 24 hours before the end of the current period.Any unused free trial portion is forfeited upon subscription purchase.Subscriptions are user-managed and auto-renewal can be turned off in Account Settings post-purchase.Uninstalling the app doesn't cancel subscription.
    </string>
    <string name="text_restore" translatable="false"><b>Restore</b></string>
    <string name="license_key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAqJBaOdDmNCMMcsK/NyPAlBIz62MtUFFvAMjSpNiM7alhoAbwMW4cSzy+cjMvSYWgDQv+SnD9YqK9ZcZ0rJ/gQkBclhLtw5rQjq/KpEuoToTkg3zxJd6epUiLsieBXgGwTMpEFVoz3qDfYQXO9bqvJZVQMjeFzSpfpQYboaHb0ohcHKqxvmvlGgz1FYtqI8PmAxq0HwHvnf/yXQeyQ9hWXJo1DpshxgltzT+ShR0GczCPasffi5pUTVwAyCgMq+SvZ84bOJ0uA4wnaktM09sjxbpmoUQxKVeJ4q2Ihe6ln7XK06hQgoYR1YGzRH+hGbWmB9TN3cyeYVGV9DIIkFOVwwIDAQAB</string>


    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->

    <!--    AD Test-->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string-array name="interstitial_ad_unit_id" translatable="false">
        <item>ca-app-pub-3940256099942544/1033173712</item>
        <item>ca-app-pub-3940256099942544/1033173712</item>
        <item>ca-app-pub-3940256099942544/1033173712</item>
    </string-array>
    <string name="reward_interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/5354046379</string>
    <string-array name="reward_ad_unit_id">
        <item>ca-app-pub-3940256099942544/5224354917</item>
        <item>ca-app-pub-3940256099942544/5224354917</item>
        <item>ca-app-pub-3940256099942544/5224354917</item>
        <item>ca-app-pub-3940256099942544/5224354917</item>
        <item>ca-app-pub-3940256099942544/5224354917</item>
    </string-array>

    <string name="native_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string-array name="open_ad_unit_id">
        <item>ca-app-pub-3940256099942544/9257395921</item>
        <item>ca-app-pub-3940256099942544/9257395921</item>
        <item>ca-app-pub-3940256099942544/9257395921</item>
    </string-array>
    <string name="app_ad_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>

    <!--    AD Real-->
<!--    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4608855745095547/9886951818</string>-->
<!--    <string-array name="interstitial_ad_unit_id" translatable="false">-->
<!--        <item>ca-app-pub-4608855745095547/3513115155</item>-->
<!--        <item>ca-app-pub-4608855745095547/3685888434</item>-->
<!--        <item>ca-app-pub-4608855745095547/8468475669</item>-->
<!--    </string-array>-->
<!--    <string name="reward_interstitial_ad_unit_id" translatable="false"></string>-->
<!--    <string-array name="reward_ad_unit_id">-->
<!--        <item></item>-->
<!--    </string-array>-->

<!--    <string name="native_ad_unit_id" translatable="false">ca-app-pub-4608855745095547/2425811494</string>-->
<!--    <string-array name="open_ad_unit_id">-->
<!--        <item>ca-app-pub-4608855745095547/6516065902</item>-->
<!--        <item>ca-app-pub-4608855745095547/5202984231</item>-->
<!--        <item>ca-app-pub-4608855745095547/6382821073</item>-->
<!--    </string-array>-->
<!--    <string name="app_ad_id" translatable="false">ca-app-pub-4608855745095547~6115227761</string>-->

    <string name="dialog_default_title" translatable="false">Here\'s a message!</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_cancel" translatable="false">Cancel</string>
    <string name="LOADING" translatable="false">Loading...</string>

    <string name="tv_year_3_days_free_trial_then" translatable="false">3 days free trial <b>then</b></string>
    <string name="tv_year_price" translatable="false">đ1,000,000/year</string>
    <string name="tv_year_price_sale" translatable="false">đ1,000,000/year</string>

    <string name="tv_week_title" translatable="false">Weekly</string>
    <string name="tv_week_price" translatable="false">đ500,000/week</string>

    <string name="tv_lifetime_title" translatable="false"><b>Lifetime</b></string>
    <string name="tv_lifetime_des" translatable="false">One-time purchase</string>
    <string name="tv_lifetime_price" translatable="false">đ2,000,000</string>

</resources>