<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.select_contact.SelectContactFragment">

    <!-- Overlay View -->
    <View
        android:id="@+id/fragment_select_contact_overlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/overlay"
        android:layout_marginBottom="491dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_select_contact_card_view"
        android:layout_width="match_parent"
        android:layout_height="509dp"
        app:cardBackgroundColor="@color/home_card"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fragment_select_contact_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/fragment_select_contact_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/fragment_select_contact_btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:importantForAccessibility="no"
                android:src="@drawable/icon_btn_submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_select_contact_all_contact_card"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="12dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_select_contact_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/fragment_select_contact_all_contact"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:src="@drawable/icon_contact"
                        android:layout_marginStart="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/fragment_select_contact_all_contact"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/fragment_select_contact_all_contact"
                        />

                    <ImageView
                        android:id="@+id/fragment_select_contact_all_contact_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/layout_select_contact"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:importantForAccessibility="no" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_select_contact_specific_contact_card_view"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="12dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_select_contact_all_contact_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/fragment_select_contact_specific_contact"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:src="@drawable/icon_specific_contact"
                        android:layout_marginStart="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/fragment_select_contact_specific_contact"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/fragment_select_contact_specific_contact"
                        />

                    <ImageView
                        android:id="@+id/fragment_select_contact_specific_contact_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/layout_select_contact"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:importantForAccessibility="no" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/select_ads"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="228dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>